# TunnelMux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tunnelmux-cli/: Cargo.toml  README.md
crates/tunnelmux-cli/src/: client.rs  commands.rs  main.rs  output.rs
crates/tunnelmux-cli/tests/: shared_client_commands.rs
crates/tunnelmux-control-client/: Cargo.toml  README.md
crates/tunnelmux-control-client/src/: lib.rs
crates/tunnelmux-core/: Cargo.toml  README.md
crates/tunnelmux-core/src/: lib.rs
crates/tunnelmux-gui/: Cargo.toml  README.md  tauri.conf.json
crates/tunnelmux-gui/capabilities/: default.json
crates/tunnelmux-gui/icons/: icon.icns
crates/tunnelmux-gui/src/: commands.rs  daemon_manager.rs  lib.rs  main.rs  provider_installer.rs  settings.rs  state.rs  tray.rs  view_models.rs
crates/tunnelmux-gui/ui/: app.js  app.test.mjs  index.html  styles.css  tunnel-picker-helpers.mjs
crates/tunnelmuxd/: Cargo.toml  README.md
crates/tunnelmuxd/src/: api.rs  gateway.rs  main.rs  persistence.rs  runtime.rs
docs/: API.md  ARCHITECTURE.md  INTEGRATION-TEMPLATES.md  INTEGRATION.md  RELEASING.md  ROADMAP.md  SOLOMESH-INTEGRATION.md
docs/plans/: 2026-03-06-gui-daemon-ownership-design.md  2026-03-06-gui-daemon-ownership-implementation.md  2026-03-06-gui-diagnostics-design.md  2026-03-06-gui-diagnostics-implementation.md  2026-03-06-gui-mvp-design.md  2026-03-06-gui-mvp-implementation.md  2026-03-06-gui-native-bundles-design.md  2026-03-06-gui-native-bundles-implementation.md  2026-03-06-gui-release-signing-design.md  2026-03-06-gui-release-signing-implementation.md  2026-03-06-gui-single-page-design.md  2026-03-06-gui-single-page-implementation.md  2026-03-06-gui-usability-redesign-design.md  2026-03-06-gui-usability-redesign-implementation.md  2026-03-06-hot-config-reload-design.md  2026-03-06-hot-config-reload-implementation.md  2026-03-06-phase-3-productization-kickoff.md  2026-03-06-release-rehearsal-design.md  2026-03-06-release-rehearsal-implementation.md  2026-03-06-v0-1-4-release-prep.md  2026-03-07-cloudflare-handoff-ux-design.md  2026-03-07-cloudflare-handoff-ux-implementation.md  2026-03-07-cloudflared-named-tunnel-design.md  2026-03-07-cloudflared-named-tunnel-implementation.md  2026-03-07-error-details-entry-design.md  2026-03-07-error-details-entry-implementation.md  2026-03-07-gui-empty-state-recovery-design.md  2026-03-07-gui-empty-state-recovery-implementation.md  2026-03-07-multi-tunnel-phase1-design.md  2026-03-07-multi-tunnel-phase1-implementation.md  2026-03-07-multi-tunnel-runtime-phase2-design.md  2026-03-07-multi-tunnel-runtime-phase2-implementation.md  2026-03-07-provider-status-cta-design.md  2026-03-07-provider-status-cta-implementation.md  2026-03-07-provider-status-summary-design.md  2026-03-07-provider-status-summary-implementation.md  2026-03-07-tunnel-picker-design.md  2026-03-07-tunnel-picker-implementation.md  2026-03-07-tunnel-visual-polish-design.md  2026-03-07-tunnel-visual-polish-implementation.md  (+13 more)
docs/releases/: v0.2.0.md  v0.2.1.md
scripts/: collect-gui-bundles.sh  install.sh  package-local-release-archive.sh  package-local-release-archive.test.mjs  stage-gui-daemon-binary.sh  verify-easy-path.sh  verify-easy-path.test.mjs  write-gui-windows-signing-config.sh
