[workspace]
members = [
  "crates/tunnelmux-core",
  "crates/tunnelmuxd",
  "crates/tunnelmux-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["TunnelMux Contributors"]
description = "Standalone tunnel and reverse-proxy control plane for local services."
readme = "README.md"
homepage = "https://github.com/kexuejin/TunnelMux"
repository = "https://github.com/kexuejin/TunnelMux"
keywords = ["tunnel", "ngrok", "cloudflared", "reverse-proxy", "gateway"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
http-body-util = "0.1"
hyper = "1.8"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "process", "io-util", "sync", "time", "fs"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
tunnelmux-core = { version = "0.1.3", path = "crates/tunnelmux-core" }
