[package]
name = "tunnelmux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tunnelmux-core = { path = "../tunnelmux-core" }
