[package]
name = "tunnelmux-control-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared HTTP control-plane client for TunnelMux surfaces"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tunnelmux-core.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
