[package]
name = "tunnelmux-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop control console for TunnelMux"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10.3" }
tunnelmux-control-client.workspace = true
tunnelmux-core.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6" }

[lib]
name = "tunnelmux_gui"
path = "src/lib.rs"

[[bin]]
name = "tunnelmux-gui"
path = "src/main.rs"
