[package]
name = "tunnelmux-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop control console for TunnelMux"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
flate2 = "1.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tokio.workspace = true
tunnelmux-control-client.workspace = true
tunnelmux-core.workspace = true
url.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[lib]
name = "tunnelmux_gui"
path = "src/lib.rs"

[[bin]]
name = "tunnelmux-gui"
path = "src/main.rs"

[dev-dependencies]
axum.workspace = true
tempfile = "3.14"
tokio.workspace = true
