[package]
name = "tunnelmuxd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
reqwest.workspace = true
url.workspace = true
tunnelmux-core = { path = "../tunnelmux-core" }

[dev-dependencies]
futures-util = "0.3"
rcgen = "0.13"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
